# tape

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  setup.py  test.py
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  benchmarking.yml  build-documentation.yml  linting.yml  main.yml  publish-to-pypi.yml  python-package.yml  python-package.yml.rej  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 002f5971-virtualenv-py3.10-Cython-build-packaging.json  010065a7-virtualenv-py3.10-Cython-build-packaging.json  0448c67c-virtualenv-py3.10-Cython-build-packaging.json  05400aef-virtualenv-py3.10-Cython-build-packaging.json  057e8d22-virtualenv-py3.10-Cython-build-packaging.json  06ae6dbb-virtualenv-py3.10-Cython-build-packaging.json  0812e862-virtualenv-py3.10-Cython-build-packaging.json  0a295783-virtualenv-py3.10-Cython-build-packaging.json  0a4db2b9-virtualenv-py3.10-Cython-build-packaging.json  0bf5314c-virtualenv-py3.10-Cython-build-packaging.json  0c7a044c-virtualenv-py3.10-Cython-build-packaging.json  0de03bc7-virtualenv-py3.10-Cython-build-packaging.json  0e8f0d2b-virtualenv-py3.10-Cython-build-packaging.json  0eb3c8f2-virtualenv-py3.10-Cython-build-packaging.json  0f962c50-virtualenv-py3.10-Cython-build-packaging.json  0fafdcc9-virtualenv-py3.10-Cython-build-packaging.json  10827301-virtualenv-py3.10-Cython-build-packaging.json  10f525a2-virtualenv-py3.10-Cython-build-packaging.json  1261dd34-virtualenv-py3.10-Cython-build-packaging.json  16442846-virtualenv-py3.10-Cython-build-packaging.json  172cbb56-virtualenv-py3.10-Cython-build-packaging.json  17788840-virtualenv-py3.10-Cython-build-packaging.json  18de05c4-virtualenv-py3.10-Cython-build-packaging.json  19ff5ad2-virtualenv-py3.10-Cython-build-packaging.json  1a79825d-virtualenv-py3.10-Cython-build-packaging.json  1aa16bce-virtualenv-py3.10-Cython-build-packaging.json  1d97c551-virtualenv-py3.10-Cython-build-packaging.json  1e5c20b0-virtualenv-py3.10-Cython-build-packaging.json  1e8abfff-virtualenv-py3.10-Cython-build-packaging.json  1f489063-virtualenv-py3.10-Cython-build-packaging.json  22497b0c-virtualenv-py3.10-Cython-build-packaging.json  27f6710d-virtualenv-py3.10-Cython-build-packaging.json  2b0b4195-virtualenv-py3.10-Cython-build-packaging.json  2b6f2ba4-virtualenv-py3.10-Cython-build-packaging.json  2d0819e3-virtualenv-py3.10-Cython-build-packaging.json  3321b58a-virtualenv-py3.10-Cython-build-packaging.json  33a6bc71-virtualenv-py3.10-Cython-build-packaging.json  3b3790b1-virtualenv-py3.10-Cython-build-packaging.json  3c20f136-virtualenv-py3.10-Cython-build-packaging.json  3daa70f2-virtualenv-py3.10-Cython-build-packaging.json  (+135 more)
benchmarks/: asv.conf.json  benchmarks.py
benchmarks/tape_benchmarks/: test_analysis.py
docs/: Makefile  conf.py  examples.rst  gettingstarted.rst  index.rst  notebooks.rst  requirements.txt  tutorials.rst
docs/examples/: plasticc-eclipsing-binaries.ipynb  rrlyr-period.ipynb
docs/gettingstarted/: contributing.rst  installation.rst  quickstart.ipynb
docs/notebooks/: binning_slowly_changing_sources.ipynb  scaling_to_large_data.ipynb  structure_function_showcase.ipynb  test.ipynb  working_with_structure_function.ipynb  working_with_the_ensemble.ipynb  working_with_the_timeseries.ipynb
docs/tutorials/: batch_showcase.ipynb  binning_slowly_changing_sources.ipynb  common_data_operations.ipynb  plasticc-eclipsing-binaries.ipynb  scaling_to_large_data.ipynb  structure_function_showcase.ipynb  tape_datasets.ipynb  using_ray_with_the_ensemble.ipynb  working_with_hipscat_and_lsdb.ipynb  working_with_structure_function.ipynb  working_with_the_ensemble.ipynb  working_with_the_timeseries.ipynb
graphs/summary/: benchmarks.time_batch.json  benchmarks.time_prune_sync_workflow.json
lsstseries/: __init__.py  ensemble.py  timeseries.py
lsstseries/analysis/: __init__.py  stetsonj.py  structurefunction2.py
src/lsstseries/: __init__.py  ensemble.py  timeseries.py
src/lsstseries/analysis/: __init__.py  light_curve.py  stetsonj.py  structurefunction2.py
src/lsstseries/analysis/structure_function/: __init__.py  base_argument_container.py  base_calculator.py  light_curve.py  sf_light_curve.py
src/lsstseries/analysis/structure_function_argument_containers/: __init__.py  structure_function_argument_container.py
src/lsstseries/analysis/structure_function_calculators/: __init__.py  basic_structure_function_calculator.py  structure_function_calculator.py
src/lsstseries/utils/: __init__.py  column_mapper.py
src/lsstseries/utils/column_mapper/: column_mapper.py
src/tape/: __init__.py  ensemble.py  ensemble_frame.py  ensemble_readers.py  expr.py  timeseries.py
src/tape/analysis/: __init__.py  base.py  feature_extractor.py  light_curve.py  stetsonj.py  structurefunction2.py
src/tape/analysis/structure_function/: __init__.py  base_argument_container.py  (+3 more)
src/tape/utils/: __init__.py  utils.py
test/: test.py
tests/: pytest.ini  test_analysis.py  test_ensemble.py
tests/lsstseries/: test_example_module.py
tests/lsstseries_tests/: conftest.py  test_analysis.py  test_ensemble.py  test_timeseries.py  test_utils.py
tests/lsstseries_tests/structure_function_calculators/: test_base_calculator.py  test_bauer_2009a_calculator.py  test_bauer_2009b_calculator.py  test_calculator_registrar.py  test_iqr_calculator.py  test_light_curve.py  test_macleod_2012_calculator.py  test_schmidt_2010_calculator.py  test_sf_light_curve.py  test_structure_function_calculator.py
tests/tape_tests/: bench.py  conftest.py  test_analysis.py  test_ensemble.py  test_ensemble_frame.py  test_feature_extraction.py  test_init.py  test_packaging.py  test_timeseries.py  test_utils.py
tests/tape_tests/structure_function_calculators/: test_base_calculator.py  test_bauer_2009a_calculator.py  test_bauer_2009b_calculator.py  test_calculator_registrar.py  test_light_curve.py  test_macleod_2012_calculator.py  test_schmidt_2010_calculator.py  test_sf_light_curve.py
(+34 files in other folders)
