[project]
name = "lf-tape"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "LINCC Frameworks Team", email = "Lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic=["version"]
dependencies = [
    'pandas',
    'numpy',
    'dask>=2023.6.1',
    'dask[distributed]',
    'pyarrow',
    'pyvo',
    'scipy',
    'requests',
    'aiohttp',
    'coverage',
    "deprecated",
    "ipykernel", # Support for Jupyter notebooks
    "light-curve>=0.7.3,<0.8.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx", # Used to automatically generate documentation
    "sphinx-rtd-theme", # Used to render documentation
    "sphinx-autoapi", # Used to automatically generate api documentation
    "black", # Used for static linting of files
    # if you add dependencies here while experimenting in a notebook and you
    # want that notebook to render in your documentation, please add the
    # dependencies to ./docs/requirements.txt as well.
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "ipython", # Also used in building notebooks into Sphinx
    "matplotlib", # Used in sample notebook intro_notebook.ipynb
    "eztao==0.4.1", # Used in Structure Function example notebook
    "bokeh", # Used to render dask client dashboard in Scaling to Large Data notebook
    "ray[default]", # Used in the Ray on Ensemble notebook
    "asv==0.6.1", # Used to compute performance benchmarks
]

[project.urls]
"Source code" = "https://github.com/lincc-frameworks/tape"
"Documentation" = "https://tape.readthedocs.io/"

# TODO: Get this working or just chuck it
# [metadata]
# long_description = { file = "README.md" }
# url = "https://github.com/lincc-frameworks/tape"

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tape/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py38"]


[tool.coverage.run]
omit=["src/tape/_version.py"]
